--- a/local_runner/local-runner-sync.properties
+++ b/local_runner/local-runner-sync.properties
@@ -30,9 +30,9 @@ player-count=4
 #   Keyboard - стратегия, управляемая с клавиатуры. Нельзя указывать более одного раза.
 #       Автоматически устанавливает настройки render-to-screen=true и render-to-screen-sync=true.
 p1-type=Quick
-p2-type=Quick
+p2-type=Local
 p3-type=Quick
-p4-type=Local
+p4-type=Quick
 
 # Имя стратегии для каждого из игроков или пустая строка для автоматического определения имени.
 p1-name=
@@ -46,7 +46,7 @@ swap-car-types=false
 
 # Имя карты или пустая строка для использования карты default.
 # Список карт: default, map01, map02, map03, map04, map05, map06.
-map=map04
+map=default
 
 # Начальный номер порта для подключения первой стратегии типа Local.
 # Для каждой последующей стратегии данного типа номер порта будет увеличен на единицу.
