--- a/local_runner/local-runner-sync.properties
+++ b/local_runner/local-runner-sync.properties
@@ -7,7 +7,11 @@ render-to-screen-sync=true
 
 # Размер окна визуализатора.
 # Не используется, если настройка render-to-screen=false.
-render-to-screen-size=1200x800
+render-to-screen-size=1280x800
+
+# Номер тика, с которого игра будет отрисовываться на экран, или пустая строка для отрисовки всей игры.
+# Не используется, если настройка render-to-screen=false.
+render-to-screen-tick=
 
 # Имя файла с результатами игры. Формат файла описан в read.me.
 results-file=result.txt
