--- a/local_runner/local-runner-sync.properties
+++ b/local_runner/local-runner-sync.properties
@@ -7,7 +7,7 @@ render-to-screen-sync=true
 
 # Размер окна визуализатора.
 # Не используется, если настройка render-to-screen=false.
-render-to-screen-size=1280x800
+render-to-screen-size=640x640
 
 # Номер тика, с которого игра будет отрисовываться на экран, или пустая строка для отрисовки всей игры.
 # Не используется, если настройка render-to-screen=false.
@@ -34,9 +34,9 @@ player-count=4
 #   Keyboard - стратегия, управляемая с клавиатуры. Нельзя указывать более одного раза.
 #       Автоматически устанавливает настройки render-to-screen=true и render-to-screen-sync=true.
 p1-type=Local
-p2-type=Quick
-p3-type=Quick
-p4-type=Quick
+p2-type=Empty
+p3-type=Empty
+p4-type=Empty
 
 # Имя стратегии для каждого из игроков или пустая строка для автоматического определения имени.
 p1-name=
