--- a/local_runner/local-runner-sync.properties
+++ b/local_runner/local-runner-sync.properties
@@ -7,7 +7,7 @@ render-to-screen-sync=true
 
 # Размер окна визуализатора.
 # Не используется, если настройка render-to-screen=false.
-render-to-screen-size=640x640
+render-to-screen-size=800x800
 
 # Номер тика, с которого игра будет отрисовываться на экран, или пустая строка для отрисовки всей игры.
 # Не используется, если настройка render-to-screen=false.
@@ -54,7 +54,7 @@ disable-car-collision=true
 
 # Имя карты или пустая строка для использования карты default.
 # Список карт: default, _fdoke, _tyamgin, _ud1, map01 - map15.
-map=map14
+map=default
 
 # Начальный номер порта для подключения первой стратегии типа Local.
 # Для каждой последующей стратегии данного типа номер порта будет увеличен на единицу.
