--- a/local_runner/local-runner-sync.properties
+++ b/local_runner/local-runner-sync.properties
@@ -36,7 +36,7 @@ player-count=4
 p1-type=Local
 p2-type=Quick
 p3-type=Quick
-p4-type=Empty
+p4-type=Quick
 
 # Имя стратегии для каждого из игроков или пустая строка для автоматического определения имени.
 p1-name=
